# Machi-Koro

./: .gitattributes  CMakeLists.txt  README.md  listing-for-cmake.md  main.cpp  uml-qt.puml
Joueur/: Joueur.h  VueJoueur.cpp  VueJoueur.h
Template/: template.c  template.cpp  template.h
cartes/: Carte.cpp  Carte.h  VueCarte.cpp  VueCarte.h
cartes/batiment/bleu/: Chalutier.cpp  Chalutier.h  ChampBle.cpp  ChampFleur.cpp  ChampFleur.h  ChampMais.cpp  ChampMais.h  Ferme.cpp  Ferme.h  Foret.cpp  Foret.h  Mine.cpp  Mine.h  PetitBateauDePeche.cpp  PetitBateauDePeche.h  Verger.cpp  Verger.h  Vignoble.cpp  Vignoble.h
cartes/batiment/rouge/: Cafe.cpp  Cafe.h  ClubPrive.cpp  Pizzeria.cpp  Restaurant.cpp  Restaurant.h  Restaurant5Etoiles.cpp  Restaurant5Etoiles.h  StandDeHamburger.cpp  StandDeHamburger.h  SushiBar.cpp
cartes/batiment/vert/: BanqueDeMinivilles.cpp  BanqueDeMinivilles.h  Boulangerie.cpp  CaveAVin.cpp  EntrepriseDeDemenagement.cpp  EntrepriseDeTravauxPublics.cpp  EntrepriseDeTravauxPublics.h  Epicerie.cpp  FabriqueDeMeubles.cpp  Fleuriste.cpp  Fromagerie.cpp  HalleDeMarche.cpp  HalleDeMarche.h  MarcheDeFruitsEtLegumes.cpp  MarcheDeFruitsEtLegumes.h  MoonsterSoda.cpp  MoonsterSoda.h  Superette.cpp  Superette.h
cartes/batiment/violet/: Arboretum.cpp  CentreAffaires.cpp  CentreImpots.cpp  ChaineTelevision.cpp  ChaineTelevision.h  EntrepriseRenovation.cpp  MaisonEdition.cpp  MgaGameCenter.cpp  Stade.cpp  Stade.h  Startup.cpp  Startup.h
cartes/monument/: Aeroport.cpp  CentreCommercial.cpp  CentreCommercial.h  FabriqueDuPereNoel.cpp  FabriqueDuPereNoel.h  Gare.cpp  Gare.h  HotelDeVille.cpp  HotelDeVille.h  Monument.cpp  Monument.h  ParcAttraction.cpp  Port.cpp  Port.h  TourRadio.cpp
controleur/: Partie.cpp  Partie.h  Pioche.cpp  Pioche.h  Shop.cpp  VueInfo.cpp  VueInfo.h  VuePartie.cpp  VuePartie.h  VuePioche.cpp  VuePioche.h  VueShop.cpp  VueShop.h  utils.cpp
controleur/EditionDeJeu/: EditionDeJeu.cpp  EditionDeJeu.h
doc/: démo_ia_vs_ia.mkv  uml-qt.puml
joueur/: Joueur.cpp  Joueur.h  VueJoueur.cpp  VueJoueur.h
src/: CMakeLists.txt  listing-for-cmake.md  main.cpp
src/Joueur/: Joueur.cpp  Joueur.h
src/cartes/: Carte.cpp  Carte.h
src/cartes/batiment/: Batiment.cpp  Batiment.h
src/cartes/batiment/bleu/: BateauPeche.cpp  BateauPeche.h  Chalutier.cpp  Chalutier.h  ChampBle.cpp  ChampBle.h  ChampFleur.cpp  ChampFleur.h  ChampMais.cpp  ChampMais.h  ChampsBle.cpp  ChampsBle.h  Ferme.cpp  Ferme.h  Foret.cpp  Foret.h  Mine.cpp  Mine.h  PetitBateauDePeche.cpp  PetitBateauDePeche.h  Verger.cpp  Verger.h  Vignoble.cpp  Vignoble.h
src/cartes/batiment/rouge/: Cafe.cpp  Cafe.h  ClubPrive.cpp  ClubPrive.h  Pizzeria.cpp  Pizzeria.h  Restaurant.cpp  Restaurant.h  Restaurant5Etoiles.cpp  Restaurant5Etoiles.h  RestaurantFamilial.cpp  RestaurantFamilial.h  StandDeHamburger.cpp  StandDeHamburger.h  SushiBar.cpp  SushiBar.h
src/cartes/batiment/vert/: BanqueDeMinivilles.cpp  BanqueDeMinivilles.h  Boulangerie.cpp  Boulangerie.h  CaveAVin.cpp  EntrepriseDeDemenagement.cpp  EntrepriseDeDemenagement.h  EntrepriseDeTravauxPublics.cpp  EntrepriseDeTravauxPublics.h  Epicerie.cpp  Epicerie.h  FabriqueDeMeubles.cpp  FabriqueDeMeubles.h  Fleuriste.cpp  Fleuriste.h  Fromagerie.cpp  Fromagerie.h  HalleDeMarche.cpp  HalleDeMarche.h  MarcheDeFruitsEtLegumes.cpp  MarcheDeFruitsEtLegumes.h  MoonsterSoda.cpp  MoonsterSoda.h  Superette.cpp  Superette.h
src/cartes/batiment/violet/: Arboretum.cpp  Arboretum.h  CentreAffaires.cpp  CentreAffaires.h  CentreImpots.cpp  CentreImpots.h  ChaineTelevision.cpp  ChaineTelevision.h  EntrepriseRenovation.cpp  EntrepriseRenovation.h  MaisonEdition.cpp  MaisonEdition.h  MgaGameCenter.cpp  MgaGameCenter.h  Stade.cpp  Stade.h  Startup.cpp  Startup.h
src/cartes/monument/: Aeroport.cpp  Aeroport.h  CentreCommercial.cpp  CentreCommercial.h  Centre_commercial.cpp  Centre_commercial.h  FabriqueDuPereNoel.cpp  FabriqueDuPereNoel.h  Gare.cpp  Gare.h  HotelDeVille.cpp  HotelDeVille.h  Monument.cpp  Monument.h  ParcAttraction.cpp  ParcAttraction.h  Parc_attraction.cpp  Parc_attraction.h  Port.cpp  Port.h  TourRadio.cpp  TourRadio.h  Tour_radio.cpp  Tour_radio.h  monument.cpp  monument.h
src/controleur/: EditionDeJeu.cpp  EditionDeJeu.h  Partie.cpp  Partie.h  Pioche.cpp  Pioche.h  Shop.cpp  Shop.h  VueShop.h  utils.cpp  utils.h
src/controleur/EditionDeJeu/: Deluxe.cpp  Deluxe.h  EditionDeJeu.cpp  EditionDeJeu.h  Marina.cpp  Marina.h
src/exception/: gameExeption.h
src/joueur/: Joueur.cpp  Joueur.h
template/: template.cpp  template.h
